--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -76,9 +76,8 @@ body {
                     .dropdown-menu::before {
                         content: "";
                     position: absolute;
-                    top: -34%;
+                    top: -30px;
                     left: 70%;
-                    margin-left: -5px;
                     border-width: 15px;
                     border-style: solid;
                     border-color: transparent transparent #fff transparent;
